docs/tests/typing/bad/testfile-reference_type-1.cpp
int& f() { return 0; }
int main() {}
